# flatbuffers-retained

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs  monster_generated.rs
src/: flatbuffer_retained.rs  lib.rs  size_prefixed.rs
tests/: monster_generated.rs  test.rs
