[package]
name = "flatbuffers-retained"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers="~22.10"

[[example]]
name = "basic"

[[example]]
name = "monster_generated"
crate-type = ["staticlib"]